sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:7: error: not found: value valueCount
    for (k<- valueCount()-2 to 0){
             ^AlgCocktailSort1:13: error: not found: value valueCount
    for (k<- 0 to valueCount()-2){
                  ^